syntax = "proto3";
package ClassIsland.Shared.IPC.Protobuf.Server;
option csharp_namespace = "ClassIsland.Shared.IPC.Protobuf.Server";

import "Protobuf/Enum/Retcode.proto";

message ClientRegisterScRsp {
    Enum.Retcode Retcode = 1;
    string Message = 2;
}
